Create new files and make some modifications
- Modify functions/add-user
- Modify functions/calc
- Modify zsh/.zshrc
- Modify functions/mkcd
- Modify functions/new-file
- Modify tmux/.tmux.conf
- Modify zsh/.aliases.zsh
- Modify zsh/.zprofile
- Add functions/time-zsh
- Add functions/time-zsh-pid
- Delete zsh/.zsh_sessions/_expiration_check_timestamp
- Delete zsh/.zshenv
- Delete functions/dirstack-last-visited-folders

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -11,7 +11,7 @@ set -g @plugin 'tmux-plugins/tmux-cpu'
 set -g set-titles on  
 
 # Clear both screen and history
-bind -n C-l send-keys C-l \; run 'sleep 0.2' \; clear-history
+bind -n k-l send-keys k-l \; run 'sleep 0.2' \; clear-history
 
 # Renumber windows when a window is closed  
 set -g renumber-windows on  
@@ -139,11 +139,14 @@ bind -r C-l next-window
 # Move to last active window      
 bind Tab last-window  
 
-# Bind split panes using | and -
-bind | split-window -h
-bind - split-window -v
+# Split window shortcuts
 unbind '"'
 unbind %
+# Create new window using c and split window using | and -
+bind c new-window -c '#{pane_current_path}'
+bind | split-window -h -c '#{pane_current_path}'
+bind - split-window -v -c '#{pane_current_path}'
+
 
 # Map vim movement keys as pane movement keys with prefix
 bind h select-pane -L
