--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -89,5 +89,61 @@ cask "google-chrome"         # Google Chrome web browser
 cask "spotify"               # Spotify music streaming platform
 cask "vlc"                   # VLC media player
 
+## Utilities
+cask "dropbox"
+
 ## Fonts
-cask "font-fira-code"        # Monospaced font with programming ligatures
+
+## Font Family: Icons
+
+cask 'homebrew/cask-fonts/font-fontawesome'        # Most popular icon toolkit
+cask 'homebrew/cask-fonts/font-simple-line-icons'  # Simple and Minimal Line Icons
+cask 'homebrew/cask-fonts/font-material-icons'     # Material Design icons by Google
+cask 'homebrew/cask-fonts/font-devicons'           # An iconic font made for developers
+cask 'homebrew/cask-fonts/font-dashicons'          # WordPress admin icon font
+
+## Font Family: Nanum
+cask 'homebrew/cask-fonts/font-nanum-gothic'
+cask 'homebrew/cask-fonts/font-nanum-gothic-coding'
+cask 'homebrew/cask-fonts/font-nanum-myeongjo'
+
+## Font Family: Open Sans
+cask 'homebrew/cask-fonts/font-open-sans'
+cask 'homebrew/cask-fonts/font-open-sans-condensed'
+
+## Font Family: ETC
+cask 'homebrew/cask-fonts/font-ubuntu'
+cask 'homebrew/cask-fonts/font-source-code-pro'
+cask 'homebrew/cask-fonts/font-roboto'
+cask 'homebrew/cask-fonts/font-hack'
+cask 'homebrew/cask-fonts/font-d2coding'
+cask 'homebrew/cask-fonts/font-inconsolata'
+cask 'homebrew/cask-fonts/font-fira-code'
+cask 'homebrew/cask-fonts/font-fira-mono'
+cask 'homebrew/cask-fonts/font-jetbrains-mono'
+
+## Font Family: Powerline
+cask 'homebrew/cask-fonts/font-anonymice-powerline'
+cask 'homebrew/cask-fonts/font-consolas-for-powerline'
+cask 'homebrew/cask-fonts/font-dejavu-sans-mono-for-powerline'
+cask 'homebrew/cask-fonts/font-droid-sans-mono-for-powerline'
+cask 'homebrew/cask-fonts/font-fira-mono-for-powerline'
+cask 'homebrew/cask-fonts/font-inconsolata-for-powerline'
+cask 'homebrew/cask-fonts/font-liberation-mono-for-powerline'
+cask 'homebrew/cask-fonts/font-menlo-for-powerline'
+cask 'homebrew/cask-fonts/font-meslo-for-powerline'
+cask 'homebrew/cask-fonts/font-monofur-for-powerline'
+cask 'homebrew/cask-fonts/font-noto-mono-for-powerline'
+cask 'homebrew/cask-fonts/font-roboto-mono-for-powerline'
+cask 'homebrew/cask-fonts/font-source-code-pro-for-powerline'
+cask 'homebrew/cask-fonts/font-ubuntu-mono-derivative-powerline'
+
+# Font Family: Nerd Font
+cask 'homebrew/cask-fonts/font-ubuntu-mono-nerd-font'
+cask 'homebrew/cask-fonts/font-sauce-code-pro-nerd-font'
+cask 'homebrew/cask-fonts/font-roboto-mono-nerd-font'
+cask 'homebrew/cask-fonts/font-mononoki-nerd-font'
+cask 'homebrew/cask-fonts/font-jetbrains-mono-nerd-font'
+cask 'homebrew/cask-fonts/font-inconsolata-nerd-font'
+cask 'homebrew/cask-fonts/font-hack-nerd-font'
+cask 'homebrew/cask-fonts/font-dejavu-sans-mono-nerd-font'
