Add brew completion and make changes to configuration files
- Modify .curlrc
- Modify .gitmodules
- Add .vscode/settings.json
- Refactor .zshenv
- Change homebrew/brew-zsh
- Modify macos/git-ssh
- Add fix macos/macos-update
- Modify zsh/.aliases.zsh
- Add zsh/.zcompcache/brew_all_commands
- Modify zsh/.zshrc

--- a/.curlrc
+++ b/.curlrc
@@ -1,8 +1,41 @@
 # Disguise as IE 9 on Windows 7.
-user-agent = "Mozilla/5.0 (compatible; MSIE 9.0; Windows NT 6.1; Trident/5.0)"
+# user-agent = "Mozilla/5.0 (compatible; MSIE 9.0; Windows NT 6.1; Trident/5.0)"
 
-# When following a redirect, automatically set the previous URL as referer.
+# Set user agent to chrome - chromeOS
+# user-agent = "Mozilla/5.0 (X11; CrOS x86_64 10066.0.0) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/114.0.0.0 Safari/537.36"
+
+# Set user agent to chrome iPhone
+# user-agent = "Mozilla/5.0 (iPhone; CPU iPhone OS 13_2 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) CriOS/114.0.0.0 Mobile/15E148 Safari/604.1"
+
+
+# Set user agent to macOS chrome
+user-agent = "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_14_6) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/114.0.0.0 Safari/537.36"
+
+# When following a redirect, automatically set the previous URL as referrer.
 referer = ";auto"
 
+# How may times to attempt the request in case of failure 
+retry = 5 
+
+# How long to wait between retries 
+retry-delay = 5 
+
 # Wait 60 seconds before timing out.
-connect-timeout = 60
+connect-timeout = 30
+
+# Allow redirects
+location
+
+# Request compressed data and decompress
+compressed
+
+# Create directories when using `-o`
+create-dirs
+
+# Auto set the previous location if redirected
+referer = ";auto"
+
+# Exit with non-zero exit codes in case of failure
+fail
+
+
